Separados as macros por função. Diminuida a velocidade do home do Z. Adicionada macro de Heat Soak. Reiniciada aceleração no PRINT_END.

--- a/macros.cfg
+++ b/macros.cfg
@@ -3,8 +3,6 @@
 #####################################################################
 
 [gcode_macro global]
-variable_extruder_calibration_temp: 150
-
 variable_print_end_clean_temps:     200,190,180,170
 
 variable_moving_macros_slow_fr:     2400    ; 40
@@ -19,12 +17,6 @@ variable_extrude_fr:                180     ; 3
 variable_extrude_fast_fr:           300     ; 5
 
 variable_safe_z_rise:               5
-variable_bucket_l_pos_x:            5
-variable_bucket_l_pos_y:            307
-variable_bucket_l_pos_z:            0.2
-variable_bucket_r_pos_x:            107
-variable_bucket_r_pos_y:            307
-variable_bucket_r_pos_z:            0.2
 
 variable_purge_pos_x:               45
 
@@ -34,214 +26,13 @@ variable_brush_pos_z:               1.6
 variable_brush_width:               36
 variable_brush_depth:               8
 
-variable_retract_on_pause:          1
-variable_z_rise_on_pause:           60
-
 gcode:
     ; Nothing
 
-#####################################################################
-#    Position routines
-#####################################################################
-[gcode_macro _SAFE_Z]
-gcode:
-    {% set g = printer["gcode_macro global"] %}
-
-    {% if not 'xyz' in printer.toolhead.homed_axes %}
-        { action_raise_error("Must Home X, Y and Z Axis First!") }
-    {% endif %}
-
-    {% if printer.toolhead.position.z < g.safe_z_rise %}
-        G1 Z{g.safe_z_rise} F{g.moving_macros_fr}
-    {% endif %}
-
-[gcode_macro M_CENTER]
-gcode:
-    {% set posx = printer.toolhead.axis_maximum.x|float / 2.0 %}
-    {% set posy = printer.toolhead.axis_maximum.y|float / 2.0 %}
-    SAVE_GCODE_STATE NAME=moving
-    G90
-    _SAFE_Z
-    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
-    RESTORE_GCODE_STATE NAME=moving
-
-[gcode_macro M_FRONT_LEFT]
-gcode:
-    {% set posx = printer.toolhead.axis_minimum.x|float + 15.0 %}
-    {% set posy = printer.toolhead.axis_minimum.y|float + 15.0 %}
-    SAVE_GCODE_STATE NAME=moving
-    G90
-    _SAFE_Z
-    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
-    RESTORE_GCODE_STATE NAME=moving
-
-[gcode_macro M_FRONT_RIGHT]
-gcode:
-    {% set posx = printer.toolhead.axis_maximum.x|float - 15.0 %}
-    {% set posy = printer.toolhead.axis_minimum.y|float + 15.0 %}
-    SAVE_GCODE_STATE NAME=moving
-    G90
-    _SAFE_Z
-    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
-    RESTORE_GCODE_STATE NAME=moving
-
-[gcode_macro M_FRONT_CENTER]
-gcode:
-    {% set posx = printer.toolhead.axis_maximum.x|float / 2.0 %}
-    {% set posy = printer.toolhead.axis_minimum.y|float + 15.0 %}
-    SAVE_GCODE_STATE NAME=moving
-    G90
-    _SAFE_Z
-    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
-    RESTORE_GCODE_STATE NAME=moving
-
-[gcode_macro M_BACK_LEFT]
-gcode:
-    {% set posx = printer.toolhead.axis_minimum.x|float + 15.0 %}
-    {% set posy = printer.toolhead.axis_maximum.y|float - 15.0 %}
-    SAVE_GCODE_STATE NAME=moving
-    G90
-    _SAFE_Z
-    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
-    RESTORE_GCODE_STATE NAME=moving
-
-[gcode_macro M_BACK_RIGHT]
-gcode:
-    {% set posx = printer.toolhead.axis_maximum.x|float - 15.0 %}
-    {% set posy = printer.toolhead.axis_maximum.y|float - 15.0 %}
-    SAVE_GCODE_STATE NAME=moving
-    G90
-    _SAFE_Z
-    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
-    RESTORE_GCODE_STATE NAME=moving
-
-[gcode_macro M_BACK_CENTER]
-gcode:
-    {% set posx = printer.toolhead.axis_maximum.x|float / 2.0 %}
-    {% set posy = printer.toolhead.axis_maximum.y|float - 15.0 %}
-    SAVE_GCODE_STATE NAME=moving
-    G90
-    _SAFE_Z
-    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
-    RESTORE_GCODE_STATE NAME=moving
-
-[gcode_macro M_CUBE_CENTER]
-gcode:
-    {% set x_center = printer.toolhead.axis_maximum.x|float / 2.0 %}
-    {% set y_center = printer.toolhead.axis_maximum.y|float / 2.0 %}
-    {% set z_center = printer.toolhead.axis_maximum.z|float / 2.0 %}
-    SAVE_GCODE_STATE NAME=moving
-    G90
-    _SAFE_Z
-    G1 X{x_center} Y{y_center} Z{z_center} F{printer["gcode_macro global"].moving_macros_fast_fr}
-    RESTORE_GCODE_STATE NAME=moving
-
-#####################################################################
-#    Cleanup routines
-#####################################################################
-
-[gcode_macro BUCKET_POSITION]
-description: Position the Nozzle in the cleaning position
-gcode:
-    {% set RIGHT = params.RIGHT|default(0)|int %}
-
-    {% set g = printer["gcode_macro global"] %}
-    {% set th = printer.toolhead %}
-
-    {% if not "xyz" in th.homed_axes %}
-      { action_raise_error("Must Home X, Y and Z Axis First!") }
-    {% else %}
-        SAVE_GCODE_STATE NAME=bucket
-
-        G90
-        ; Only raise Z if not in position
-        {% if ( (not RIGHT and th.position.x != g.bucket_l_pos_x or th.position.y != g.bucket_l_pos_y) or 
-            (RIGHT and th.position.x != g.bucket_r_pos_x or th.position.y != g.bucket_r_pos_y) ) %}
-            _SAFE_Z
-        {% endif %}
-        {% if not RIGHT %}
-            G1 X{g.bucket_l_pos_x} Y{g.bucket_l_pos_y} F{g.moving_macros_fast_fr}
-            G1 Z{g.bucket_l_pos_z} F{g.moving_macros_fr}
-        {% else %}
-            G1 X{g.bucket_r_pos_x} Y{g.bucket_r_pos_y} F{g.moving_macros_fast_fr}
-            G1 Z{g.bucket_r_pos_z} F{g.moving_macros_fr}
-        {% endif %}
-
-        RESTORE_GCODE_STATE NAME=bucket
-    {% endif %}
-
-[gcode_macro CLEAN_NOZZLE]
-description: Clean the Nozzle in the bed brush
-gcode:
-    {% set RIGHT = params.RIGHT|default(0)|int %}
-
-    {% set g = printer["gcode_macro global"] %}
-    {% set b_width = g.brush_width %}
-    {% set b_depth = g.brush_depth %}
-    {% set b_segm = g.brush_width / 6 %}
-
-    {% if not "xyz" in printer.toolhead.homed_axes %}
-      { action_raise_error("Must Home X, Y and Z Axis First!") }
-    {% else %}
-        SAVE_GCODE_STATE NAME=clean
-
-        M117 Cleaning nozzle
-
-        G90
-        _SAFE_Z
-        G1 X{g.brush_pos_x + (b_width if RIGHT else 0)} Y{g.brush_pos_y} F{g.moving_macros_fast_fr}
-        G1 Z{g.brush_pos_z} F{g.moving_macros_fr}
-
-        {% set side = 1 if RIGHT else -1 %}
-        {% set nside = -1 if RIGHT else 1 %}
-
-        G91
-        {% for _ in range(5) %}
-            G1 X{b_segm * nside}     Y-{b_depth} F{g.moving_macros_fast_fr}
-            G1 X{b_segm * 2 * nside} Y{b_depth}
-            G1 X{b_segm * 2 * nside} Y-{b_depth}
-            G1 X{b_segm * nside}     Y{b_depth}
-            G1 X{b_width * side}
-            G1 Y-{b_depth / 3.0}
-            G1 X{b_width * nside}
-            G1 Y{b_depth / 3.0}
-            G1 X{b_width * side}
-        {% endfor %}
-
-        _SAFE_Z
-
-        BUCKET_POSITION RIGHT={RIGHT}
-
-        RESTORE_GCODE_STATE NAME=clean
-    {% endif %}
-
-[gcode_macro PURGE_NOZZLE]
-gcode:
-    {% set g = printer["gcode_macro global"] %}
-
-    {% if not "xyz" in printer.toolhead.homed_axes %}
-      { action_raise_error("Must Home X, Y and Z Axis First!") }
-    {% else %}
-      {% if not printer.extruder.temperature >= 200 %}
-        { action_raise_error("Heat up nozzle first!") }
-      {% else %}
-        M117 Purging nozzle
-        STATUS_CLEANING
-
-        BUCKET_POSITION
-
-        SAVE_GCODE_STATE NAME=purge
-
-        ; Purge nozzle while moving Toolhead
-        M83
-        G92 E0
-        G90
-        G1 X{g.purge_pos_x} E20 F{g.extrude_fr}
-        G92 E0
-        M117
-        RESTORE_GCODE_STATE NAME=purge
-      {% endif %}
-    {% endif %}
+[include position.cfg]
+[include cleanup.cfg]
+[include calibration.cfg]
+[include filament.cfg]
 
 #####################################################################
 #    Print routines
@@ -295,7 +86,12 @@ gcode:
 [gcode_macro PRINT_END]
 gcode:
     {% set g = printer["gcode_macro global"] %}
+    {% set max_accel = printer.configfile.settings.printer.max_accel|float %}
+    {% set max_accel_to_decel = printer.configfile.settings.printer.max_accel_to_decel|float %}
+    {% set max_velocity = printer.configfile.settings.printer.max_velocity|float %}
 
+    SET_VELOCITY_LIMIT ACCEL={max_accel} ACCEL_TO_DECEL={max_accel_to_decel}  ; Reset Acceleration and Max Velocity
+    SET_VELOCITY_LIMIT VELOCITY={max_velocity}
     G91                                         ; relative positioning
     G1 Z{g.safe_z_rise} F{g.moving_macros_fr}   ; move nozzle to remove stringing
     SET_GCODE_OFFSET Z=0 MOVE=1                 ; reset Z offset
@@ -392,43 +188,6 @@ gcode:
 #    Calibration, Homing and Gantry related
 #####################################################################
 
-[gcode_macro SET_CALIBRATION_TEMP]
-gcode:
-    {% set EXTRUDER = params.EXTRUDER %}
-    {% set BED = params.BED %}
-
-    {% set g = printer["gcode_macro global"] %}
-
-    {% if EXTRUDER is defined %}
-        {% set EXTRUDER_TEMP = 0 if EXTRUDER == '0' else g.extruder_calibration_temp %}
-
-        M104 S{EXTRUDER_TEMP}         ; Set extruder temperature
-    {% endif %}
-
-    {% if BED is defined %}
-        {% set NEXT_BED_TEMP = printer.heater_bed.temperature %}
-        {% set BED_TEMP = 0 if BED == '0' else NEXT_BED_TEMP %}
-
-        M190 S{BED_TEMP}
-
-        {% if BED_TEMP > 0 %}
-            ; Wait 20s the temperature become stable
-            M117 Waiting 20s Bed temperature to settle({BED_TEMP}C)...
-            G4 P10000
-            M117 Waiting 10s Bed temperature to settle({BED_TEMP}C)...
-            G4 P10000
-        {% endif %}
-    {% endif %}
-
-    {% if EXTRUDER_TEMP is defined %}
-        {% if EXTRUDER_TEMP > 0 %}
-            M117 Setting Extruder temperature: {EXTRUDER_TEMP}C...
-        {% endif %}
-        M106 S255
-        M109 S{EXTRUDER_TEMP}    ; Wait for Extruder
-        M106 S0
-    {% endif %}
-
 [gcode_macro G28]
 rename_existing: G0028
 gcode:
@@ -442,31 +201,6 @@ gcode:
     G0028 { rawparams }
 
     SET_CALIBRATION_TEMP EXTRUDER=0
-
-    M117 Ready
-    STATUS_READY
-
-[gcode_macro BED_MESH_CALIBRATE]
-rename_existing: BED_MESH_CALIBRATE_
-description: Perform Mesh Bed Leveling with klicky automount
-gcode:
-    {% set g = printer["gcode_macro global"] %}
-
-    {% if not 'xyz' in printer.toolhead.homed_axes %}
-        { action_raise_error("Must Home X, Y and Z Axis First!") }
-    {% endif %}
-
-    STATUS_LEVELING
-
-    SET_CALIBRATION_TEMP BED=1
-
-    M117 Bed mesh calibrating
-
-    BED_MESH_CALIBRATE_ {% for p in params
-           %}{'%s=%s ' % (p, params[p])}{%
-          endfor %}
-
-    SET_CALIBRATION_TEMP BED=0
 
     M117 Ready
     STATUS_READY
@@ -496,37 +230,6 @@ gcode:
     M117 Ready
     STATUS_READY
 
-[gcode_macro PROBE_ACCURACY]
-rename_existing: PROBE_ACCURACY_
-description:Probe Z-height accuracy at bed center
-gcode:
-    {% set g = printer["gcode_macro global"] %}
-
-    {% if not 'xyz' in printer.toolhead.homed_axes %}
-        { action_raise_error("Must Home X, Y and Z Axis First!") }
-    {% endif %}
-
-    M_CENTER
-
-    PROBE_ACCURACY_ {% for p in params
-            %}{'%s=%s ' % (p, params[p])}{%
-            endfor %}
-
-[gcode_macro PROBE_CALIBRATE]
-rename_existing: PROBE_CALIBRATE_
-gcode:
-    {% set g = printer["gcode_macro global"] %}
-
-    {% if not 'xyz' in printer.toolhead.homed_axes %}
-        { action_raise_error("Must Home X, Y and Z Axis First!") }
-    {% endif %}
-
-    M_CENTER
-
-    PROBE_CALIBRATE_ {% for p in params
-            %}{'%s=%s ' % (p, params[p])}{%
-            endfor %}
-
 [gcode_macro G32]
 gcode:
     {% set BED_MESH = params.BED_MESH %}
@@ -543,73 +246,15 @@ gcode:
     G28 Z
     _SAFE_Z
 
-#####################################################################
-#    Filament routines
-#####################################################################
-
-[gcode_macro UNLOAD_FILAMENT]
+[gcode_macro HEAT_SOAK]
 gcode:
-    {% set g = printer["gcode_macro global"] %}
-
-    {% if not "xyz" in printer.toolhead.homed_axes %}
-        { action_raise_error("Must Home X, Y and Z Axis First!") }
-    {% else %}
-        {% if not printer.extruder.temperature >= 180 %}
-            { action_raise_error("Heat up nozzle first!") }
-        {% else %}
-            SAVE_GCODE_STATE NAME=unload_filament
-
-            BUCKET_POSITION
-
-            ; Extruder in relative mode
-            M83
-            M117 Unloading
-            G1 E-10 F{g.retraction_fastest_fr}  ; retract filament from nozzle super fast
-            G1 E-10 F{g.retraction_fast_fr}     ; retract filament from nozzle
-            G1 E-35 F{g.retraction_fr}          ; ...
-            G1 E-35 F{g.retraction_fr}          ; retract filament completely
-            M117
-
-            RESTORE_GCODE_STATE NAME=unload_filament
-        {% endif %}
+    {% if not 'xyz' in printer.toolhead.homed_axes %}
+        G28
     {% endif %}
-
-[gcode_macro LOAD_FILAMENT]
-gcode:
-    {% set g = printer["gcode_macro global"] %}
-
-    {% if not "xyz" in printer.toolhead.homed_axes %}
-        { action_raise_error("Must Home X, Y and Z Axis First!") }
-    {% else %}
-        {% if not printer.extruder.temperature >= 200 %}
-            { action_raise_error("Heat up nozzle first!") }
-        {% else %}
-            SAVE_GCODE_STATE NAME=load_filament
-
-            BUCKET_POSITION
-
-            ; Extruder in relative mode
-            M83
-
-            M117 Get ready...
-            ; Wait until operator is ready
-            G4 S3
-
-            M117 Loading
-            G1 E10 F{g.extrude_fr}          ; extrude to fill the extruder
-            M117 Replacing old filament
-            G1 E35 F{g.extrude_fast_fr}     ; replacing
-            G1 E35 F{g.extrude_fast_fr}     ; ...
-            G1 E35 F{g.extrude_fr}          ; replacing slowly...
-
-            PURGE_NOZZLE
-            CLEAN_NOZZLE
-
-            RESTORE_GCODE_STATE NAME=load_filament
-
-            M117
-        {% endif %}
-    {% endif %}
+    M_BACK_CENTER
+    M106 S255
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=80
+    SET_HEATER_TEMPERATURE HEATER=extruder TARGET=150
 
 #####################################################################
 #    General and Overrides
@@ -672,7 +317,7 @@ gcode:
 [gcode_macro M204]
 rename_existing: M00204
 gcode:
-  {% set f = params.F|default(0.5)|float %}
+  {% set f = params.F|default(1.0)|float %}
 
   {% if 'S' in params %}
     {% set s = params.S|float %}
