Adicionada bed mesh apenas a área de impressão.

--- a/calibration.cfg
+++ b/calibration.cfg
@@ -35,24 +35,20 @@ gcode:
         M106 S0
     {% endif %}
 
-[gcode_macro BED_MESH_CALIBRATE]
-rename_existing: BED_MESH_CALIBRATE_
-description: Perform Mesh Bed Leveling with klicky automount
+[gcode_macro BED_MESH_CALIBRATE_START]
+description: Set calibration temperature to the bed before Bed Mesh
 gcode:
     {% if not 'xyz' in printer.toolhead.homed_axes %}
         { action_raise_error("Must Home X, Y and Z Axis First!") }
     {% endif %}
 
-    STATUS_LEVELING
+    M117 Bed mesh calibrating
 
     SET_CALIBRATION_TEMP BED=1
 
-    M117 Bed mesh calibrating
-
-    BED_MESH_CALIBRATE_ {% for p in params
-           %}{'%s="%s" ' % (p, params[p])}{%
-          endfor %}
-
+[gcode_macro BED_MESH_CALIBRATE_END]
+description: Clear calibration temperature to the bed after Bed Mesh
+gcode:
     SET_CALIBRATION_TEMP BED=0
 
     M117 Ready
