--- a/printer.cfg
+++ b/printer.cfg
@@ -8,6 +8,9 @@
 serial: /dev/ttyAMA0
 restart_method: command
 
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
+
 [printer]
 kinematics:             corexy
 max_velocity:           450
@@ -32,6 +35,8 @@ resolution: 0.05
 [respond]
 
 [pause_resume]
+
+[exclude_object]
 
 #####################################################################
 #   Motors
@@ -126,7 +131,7 @@ z_hop:              10
 
 [probe]
 pin:                        ^PA3
-z_offset:                   -0.690
+z_offset:                   -0.700
 speed:                      5
 samples:                    5
 sample_retract_dist:        2.0
@@ -196,9 +201,6 @@ runout_gcode:
 #    Resonance
 #####################################################################
 
-[mcu rpi]
-serial: /tmp/klipper_host_mcu
-
 [adxl345]
 cs_pin: rpi:None
 axes_map: z, y, x
@@ -209,14 +211,27 @@ probe_points:
     150, 140, 20
 
 [input_shaper]
-# Measured on 11/12/2022 - 19:00
-# Printer with some corner brackets(all sides)
+# Measured on 12/04/2023 - 18:00
 shaper_type_x = 3hump_ei
-shaper_freq_x = 95.0
-shaper_type_y = zv
-shaper_freq_y = 44.8
+shaper_freq_x = 93.2
+shaper_type_y = 3hump_ei
+shaper_freq_y = 76.6
 
 # Calculating the best input shaper parameters for x axis
+#20230412_174732:
+#Fitted shaper 'zv' frequency = 122.6 Hz (vibrations = 19.8%, smoothing ~= 0.015)
+#To avoid too much smoothing with 'zv', suggested max_accel <= 58600 mm/sec^2
+#Fitted shaper 'mzv' frequency = 75.8 Hz (vibrations = 8.1%, smoothing ~= 0.037)
+#To avoid too much smoothing with 'mzv', suggested max_accel <= 16900 mm/sec^2
+#Fitted shaper 'ei' frequency = 40.0 Hz (vibrations = 4.1%, smoothing ~= 0.201)
+#To avoid too much smoothing with 'ei', suggested max_accel <= 3000 mm/sec^2
+#Fitted shaper '2hump_ei' frequency = 39.6 Hz (vibrations = 0.3%, smoothing ~= 0.344)
+#To avoid too much smoothing with '2hump_ei', suggested max_accel <= 1600 mm/sec^2
+#Fitted shaper '3hump_ei' frequency = 93.2 Hz (vibrations = 0.0%, smoothing ~= 0.094)
+#To avoid too much smoothing with '3hump_ei', suggested max_accel <= 6400 mm/sec^2
+#Recommended shaper is 3hump_ei @ 93.2 Hz
+# Shaper calibration data written to /tmp/resonances_x_20230412_174732.csv file
+#20220725_172420:
 # Fitted shaper 'zv' frequency = 55.8 Hz (vibrations = 3.5%, smoothing ~= 0.056)
 # To avoid too much smoothing with 'zv', suggested max_accel <= 12100 mm/sec^2
 # Fitted shaper 'mzv' frequency = 55.0 Hz (vibrations = 0.8%, smoothing ~= 0.067)
@@ -231,6 +246,20 @@ shaper_freq_y = 44.8
 # Shaper calibration data written to /tmp/calibration_data_x_20220725_172420.csv file
 
 # Calculating the best input shaper parameters for y axis
+#20230412_175019:
+#Fitted shaper 'zv' frequency = 48.0 Hz (vibrations = 5.3%, smoothing ~= 0.073)
+#To avoid too much smoothing with 'zv', suggested max_accel <= 9000 mm/sec^2
+#Fitted shaper 'mzv' frequency = 46.2 Hz (vibrations = 1.4%, smoothing ~= 0.095)
+#To avoid too much smoothing with 'mzv', suggested max_accel <= 6300 mm/sec^2
+#Fitted shaper 'ei' frequency = 49.6 Hz (vibrations = 0.0%, smoothing ~= 0.131)
+#To avoid too much smoothing with 'ei', suggested max_accel <= 4600 mm/sec^2
+#Fitted shaper '2hump_ei' frequency = 62.6 Hz (vibrations = 0.0%, smoothing ~= 0.138)
+#To avoid too much smoothing with '2hump_ei', suggested max_accel <= 4400 mm/sec^2
+#Fitted shaper '3hump_ei' frequency = 76.6 Hz (vibrations = 0.0%, smoothing ~= 0.140)
+#To avoid too much smoothing with '3hump_ei', suggested max_accel <= 4300 mm/sec^2
+#Recommended shaper is mzv @ 46.2 Hz
+# Shaper calibration data written to /tmp/resonances_y_20230412_175019.csv file
+#20220725_172420:
 # Fitted shaper 'zv' frequency = 52.0 Hz (vibrations = 12.0%, smoothing ~= 0.063)
 # To avoid too much smoothing with 'zv', suggested max_accel <= 10500 mm/sec^2
 # Fitted shaper 'mzv' frequency = 40.8 Hz (vibrations = 0.1%, smoothing ~= 0.122)
@@ -249,6 +278,9 @@ shaper_freq_y = 44.8
 #####################################################################
 
 [include macros.cfg]
+
+# Must be after macros.cfg, so the original BED_MESH_CALIBRATE is overrided
+[include KAMP/Adaptive_Mesh.cfg]
 
 #####################################################################
 #    Lights
