--- a/macros.cfg
+++ b/macros.cfg
@@ -43,7 +43,8 @@ gcode:
     {% set BED = params.BED|default(100)|int %}
     {% set EXTRUDER = params.EXTRUDER|default(250)|int %}
     {% set CHAMBER = params.CHAMBER|default(30)|int %}
-    {% set BED_MESH = params.BED_MESH %}
+    {% set BED_MESH_PROFILE = params.BED_MESH_PROFILE %}
+    {% set BED_MESH = params.BED_MESH|default(True)|int %}
     {% set Z_OFFSET = params.Z_OFFSET %}
 
     {% if printer['output_pin chamberlight'].value <= 0 %}
@@ -56,8 +57,16 @@ gcode:
         G32                         ; Get moving ready
     {% endif %}
 
-    {% if BED_MESH is defined and BED_MESH|length %}
-        BED_MESH_PROFILE LOAD={BED_MESH}
+    {% if BED_MESH == True %}
+        # Use KAMP to bed mesh only the print area
+        SETUP_KAMP_MESHING DISPLAY_PARAMETERS=1
+        BED_MESH_CLEAR
+        BED_MESH_CALIBRATE
+    {% else %}
+        # If bed mesh is not enabled, we can set a bed mesh profile, if set
+        {% if BED_MESH_PROFILE is defined and BED_MESH_PROFILE|length %}
+            BED_MESH_PROFILE LOAD={BED_MESH_PROFILE}
+        {% endif %}
     {% endif %}
 
     M140 S{BED}                     ; Set bed temperature
@@ -236,11 +245,13 @@ gcode:
 
     BED_MESH_CLEAR
 
+    M106 S0                             ; Turn off fan
+
     {% if not 'xyz' in printer.toolhead.homed_axes %}
         G28
     {% endif %}
 
-    SET_CALIBRATION_TEMP EXTRUDER=1     ; Set the extruder temperature so the next G28
+    SET_CALIBRATION_TEMP EXTRUDER=1
     QUAD_GANTRY_LEVEL
 
     G28 Z
