--- a/moonraker.conf
+++ b/moonraker.conf
@@ -6,7 +6,7 @@ max_upload_size: 1024
 
 [file_manager]
 # post processing for object cancel. Not recommended for low resource SBCs such as a Pi Zero. Default False 
-enable_object_processing: False
+enable_object_processing: True
 
 [authorization]
 cors_domains:
@@ -46,13 +46,6 @@ env: ~/.KlipperScreen-env/bin/python
 requirements: scripts/KlipperScreen-requirements.txt
 install_script: scripts/KlipperScreen-install.sh
 
-[update_manager client z_calibration]
-type: git_repo
-path: ~/klipper_z_calibration
-origin: https://github.com/protoloft/klipper_z_calibration.git
-install_script: install.sh
-managed_services: klipper
-
 [update_manager client moonraker-telegram-bot]
 type: git_repo
 path: ~/moonraker-telegram-bot
@@ -60,3 +53,11 @@ origin: https://github.com/nlef/moonraker-telegram-bot.git
 env: ~/moonraker-telegram-bot-env/bin/python
 requirements: scripts/requirements.txt
 install_script: scripts/install.sh
+
+[update_manager Klipper-Adaptive-Meshing-Purging]
+type: git_repo
+channel: dev
+path: ~/Klipper-Adaptive-Meshing-Purging
+origin: https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging.git
+managed_services: klipper
+primary_branch: main
