Atualização do KlipperScreen. Melhorias nas macros e adicionado shutdown ao entrar em IDLE. Adicionado KAMP. Corrigido offset do Tap.

--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -1,5 +1,6 @@
 [main]
-theme = material-light
+theme = z-bolt
+font_size = small
 print_estimate_method = slicer
 screen_blanking = 900
 use_dpms = True
