--- a/kamp-adaptive-mesh.cfg
+++ b/kamp-adaptive-mesh.cfg
@@ -10,18 +10,18 @@ rename_existing: _BED_MESH_CALIBRATE
 
 ### This section allows control of status LEDs your printer may have.
 
-variable_led_enable: True               # Enables/disables the use of status LEDs in this macro.
+variable_led_enable: 1               # Enables/disables the use of status LEDs in this macro.
 variable_status_macro: 'STATUS_MESHING' # If you have status LEDs in your printer (StealthBurner), you can use the macro that changes their status here.
 
 ### This section configures mesh point fuzzing, which allows probe points to be varied slightly if printing multiples of the same G-code file.
 
-variable_fuzz_enable: True              # Enables/disables the use of mesh point fuzzing to slightly randomize probing points to spread out wear on a build surface, default is False.
+variable_fuzz_enable: 1              # Enables/disables the use of mesh point fuzzing to slightly randomize probing points to spread out wear on a build surface, default is False.
 variable_fuzz_min: 0                    # If enabled, the minimum amount in mm a probe point can be randomized, default is 0.
 variable_fuzz_max: 4                    # If enabled, the maximum amount in mm a probe point can be randomized, default is 4.
 
 ### This section is for configuring a mesh margin, which allows the probed mesh to be expanded outwards from the print area.
 
-variable_margin_enable: False           # Enables/disables adding a margin to the meshed area to pad a mesh out for specific needs, default is False.
+variable_margin_enable: 0           # Enables/disables adding a margin to the meshed area to pad a mesh out for specific needs, default is False.
 variable_margin_size: 5                 # Size in millimeters to expand the mesh outwards from the print area in all directions.
 
 ### This section is for those using a dockable probe that is stored outside of the print area. ###
@@ -30,13 +30,13 @@ variable_margin_size: 5                 # Size in millimeters to expand the mesh
 # *** Here we use Attach/Detach probe macros to set the calibration temperature before meshing
 # *** Must check if an update is issued
 # ***
-variable_probe_dock_enable: False       # Enables/disables the use of a dockable probe that is stored outside of the print area, default is False.
+variable_probe_dock_enable: 1                    # Enables/disables the use of a dockable probe that is stored outside of the print area, default is False.
 variable_attach_macro: 'BED_MESH_CALIBRATE_START'   # Here is where you define the macro that ATTACHES the probe to the printhead. E.g. 'Attach_Probe'
 variable_detach_macro: 'BED_MESH_CALIBRATE_END'     # Here is where you define the macro that DETACHES the probe from the printhead. E.g. 'Dock_Probe'
 
 ### This section is for those who are using Moonraker's Update Manager for KAMP, or want a more verbose macro. ###
 
-variable_display_parameters: True       # Display macro paramters in the console, useful for debugging the SETUP_KAMP_MESHING call, or more verbosity.
+variable_display_parameters: 1       # Display macro paramters in the console, useful for debugging the SETUP_KAMP_MESHING call, or more verbosity.
 
 gcode:
 
