--- a/extruder.cfg
+++ b/extruder.cfg
@@ -37,7 +37,9 @@ pid_kd:                     131.721
 [tmc2209 extruder]
 uart_pin:               PD10
 interpolate:            false
-run_current:            0.4  # 0.3 if slow print, < 9mm3/s
+# 0.3 < 9mm3/s
+# 0.65 < 40mm3/s
+run_current:            0.4
 sense_resistor:         0.110
 stealthchop_threshold:  0
 
