--- a/macros.cfg
+++ b/macros.cfg
@@ -51,7 +51,9 @@ gcode:
         CHAMBERLIGHT VAL=.1
     {% endif %}
 
-    M117 Profile='{BED_MESH}'
+    HEAT_SOAK CHAMBER={CHAMBER}
+
+    M117 Bed Mesh Profile='{BED_MESH}'
 
     {% if not "xyz" in printer.toolhead.homed_axes or not printer.quad_gantry_level.applied %}
         G32                         ; Get moving ready
@@ -259,21 +261,37 @@ gcode:
 
 [gcode_macro HEAT_SOAK]
 gcode:
+    {% set chamber_temp = params.CHAMBER|default(0.0)|float %}
+
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=80
+
     {% if not 'xyz' in printer.toolhead.homed_axes %}
         G28
     {% endif %}
-    M_BACK_CENTER
-    M106 S255
-    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=80
+
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET=150
+    M106 S255
+    M_BACK_CENTER
+
+    {% if chamber_temp > 0 %}
+        M117 Heat soak, waiting chamber temperature
+        TEMPERATURE_WAIT SENSOR="temperature_sensor chamber" MINIMUM={chamber_temp}
+        M106 S0
+        M117 Heat soak, chamber temperature reacted
+    {% endif %}
 
 #####################################################################
 #    General and Overrides
 #####################################################################
 
+[gcode_macro POWER_OFF_PRINTER]
+gcode:
+    {action_call_remote_method("shutdown_machine")}
+
 [gcode_macro ENTER_IDLE]
 gcode:
     M18
+    POWER_OFF_PRINTER
 
 [gcode_macro M84]
 rename_existing: M0084
