--- a/printer.cfg
+++ b/printer.cfg
@@ -131,7 +131,7 @@ z_hop:              10
 
 [probe]
 pin:                        ^PA3
-z_offset:                   -0.700
+z_offset:                   -0.580
 speed:                      5
 samples:                    5
 sample_retract_dist:        2.0
@@ -178,11 +178,11 @@ speed: 300
 horizontal_move_z: 5
 mesh_min: 40, 40
 mesh_max: 260, 260
-fade_start: 0.6
-fade_end: 10.0
-probe_count: 5,5
+fade_start: 0.3
+fade_end: 0.65
+probe_count: 7,7
 algorithm: bicubic
-relative_reference_index: 12
+relative_reference_index: 24
 
 #####################################################################
 #    Filament
@@ -278,9 +278,7 @@ shaper_freq_y = 76.6
 #####################################################################
 
 [include macros.cfg]
-
-# Must be after macros.cfg, so the original BED_MESH_CALIBRATE is overrided
-[include KAMP/Adaptive_Mesh.cfg]
+[include kamp-adaptive-mesh.cfg]
 
 #####################################################################
 #    Lights
